<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21596F"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move_detection"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:background="@android:drawable/picture_frame"
        android:text="@string/pendeteksi"
        android:textColor="#050505"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_import"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:background="@android:drawable/picture_frame"
        android:text="@string/import_gallery"
        android:textColor="#030303"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_help"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="0dp"
        android:text="@string/bantuan"
        android:textColor="#020202"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/tentang"
        android:textColor="#020202"
        android:textStyle="bold" />

</LinearLayout>