<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Pendeteksi">

    <com.priyankvasa.android.cameraviewex.CameraView
        android:id="@+id/camera"
        android:layout_width="480dp"
        android:layout_height="640dp"
        android:layout_marginBottom="0dp"
        android:adjustViewBounds="true"
        android:keepScreenOn="true"
        app:aspectRatio="4:3"
        app:autoFocus="continuous_picture"
        app:awb="auto"
        app:cameraMode="single_capture"
        app:facing="back"
        app:flash="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:opticalStabilization="true"
        app:outputFormat="jpeg"
        app:pinchToZoom="true"
        app:shutter="short_time"
        app:touchToFocus="true"
        app:zsl="true" >

    </com.priyankvasa.android.cameraviewex.CameraView>

    <TextView
        android:id="@+id/process_time_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EE009688"
        android:fontFamily="times"
        android:gravity="right"
        android:padding="2dp"
        android:text="@string/process_time"
        android:textAlignment="gravity"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AE009688"
        android:fontFamily="times"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/info"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/capturePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="#009688"
        android:padding="7dp"
        android:shadowColor="@android:color/darker_gray"
        android:text="Deteksi"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/prediction_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:background="#009688"
        android:fontFamily="times"
        android:text="HASIL PREDIKSI :"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/result_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#61009688"
        android:fontFamily="times"
        android:text="@string/hasil_1_nhasil_2_nhasil_3"
        android:textAlignment="center"
        android:textColor="#080809"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prediction_bar" />

    <TextView
        android:id="@+id/process_name_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="times"
        android:gravity="left"
        android:padding="2dp"
        android:text="  Waktu Proses Deteksi : "
        android:textAlignment="gravity"
        android:textColor="#FCF7F7"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>